#ES-301 - refactoring experiment process creation