@@ -3,15 +3,13 @@ package com.ecaservice.server.service.experiment;
 import com.ecaservice.core.lock.annotation.Locked;
 import com.ecaservice.server.bpm.service.ProcessManager;
 import com.ecaservice.server.config.ProcessConfig;
-import com.ecaservice.server.dto.CreateExperimentRequestDto;
 import com.ecaservice.server.model.entity.Experiment;
-import com.ecaservice.server.model.experiment.ExperimentMessageRequestData;
+import com.ecaservice.server.model.experiment.AbstractExperimentRequestData;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.camunda.bpm.engine.RuntimeService;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
@@ -19,8 +17,9 @@ import static com.ecaservice.common.web.util.LogHelper.EV_REQUEST_ID;
 import static com.ecaservice.common.web.util.LogHelper.TX_ID;
 import static com.ecaservice.common.web.util.LogHelper.putMdc;
 import static com.ecaservice.server.bpm.CamundaVariables.APP_INSTANCES_UUID;
-import static com.ecaservice.server.bpm.CamundaVariables.EXPERIMENT_ID;
 import static com.ecaservice.server.bpm.CamundaVariables.EVALUATION_REQUEST_DATA;
+import static com.ecaservice.server.bpm.CamundaVariables.EXPERIMENT_ID;
+import static com.ecaservice.server.bpm.CamundaVariables.REQUEST_CHANNEL;
 
 /**
  * Experiment process manager.
@@ -71,29 +70,17 @@ public class ExperimentProcessManager {
     /**
      * Creates experiment request.
      *
-     * @param experimentMessageRequestData - experiment message request data
+     * @param experimentRequestData - experiment request data
      */
-    public void createExperimentRequest(ExperimentMessageRequestData experimentMessageRequestData) {
+    public void createExperimentRequest(AbstractExperimentRequestData experimentRequestData) {
         log.info("Starting create experiment [{}] request business process",
-                experimentMessageRequestData.getRequestId());
-        Map<String, Object> variables = Collections.singletonMap(EVALUATION_REQUEST_DATA, experimentMessageRequestData);
+                experimentRequestData.getRequestId());
+        Map<String, Object> variables = Map.of(EVALUATION_REQUEST_DATA, experimentRequestData, REQUEST_CHANNEL,
+                experimentRequestData.getChannel().name());
         processManager.startProcess(processConfig.getCreateExperimentRequestProcessId(),
-                experimentMessageRequestData.getRequestId(), variables);
+                experimentRequestData.getRequestId(), variables);
         log.info("Create experiment [{}] request business process has been finished",
-                experimentMessageRequestData.getRequestId());
-    }
-
-    /**
-     * Creates experiment web request.
-     *
-     * @param requestId            - experiment request id
-     * @param experimentRequestDto - experiment request dto
-     */
-    public void createExperimentWebRequest(String requestId, CreateExperimentRequestDto experimentRequestDto) {
-        log.info("Starting create experiment [{}] web request business process", requestId);
-        Map<String, Object> variables = Collections.singletonMap(EVALUATION_REQUEST_DATA, experimentRequestDto);
-        processManager.startProcess(processConfig.getCreateExperimentWebRequestProcessId(), requestId, variables);
-        log.info("Create experiment [{}] business process has been finished", requestId);
+                experimentRequestData.getRequestId());
     }
 
     private boolean hasActiveProcess(Experiment experiment) {
